--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -43,7 +43,17 @@ secrets:
             { name: 'document', label: [{ document: 'verified' }], require_doc: 'true' },
             { name: 'address', label: [{ address: 'verified' }], require_doc: 'true' },
         ]
-        plugins: []
+        plugins: [
+          <%- if @config.dig('plugins', 'organization', 'enabled') -%>
+          {
+            name: "organization",
+            config: {
+              signup_email: "<%= @config.dig('plugins', 'organization', 'signup_email') %>",
+              signup_telegram: "<%= @config.dig('plugins', 'organization', 'signup_telegram') %>"
+            }
+          },
+          <%- end -%>
+        ]
         roleTypes: [
             {
                 value: 'Admin',
@@ -81,6 +91,20 @@ secrets:
                 value: 'Broker',
                 key: 'broker',
             },
+            <%- if @config.dig('plugins', 'organization', 'enabled') -%>
+            {
+                value: 'Organization Admin'
+                key: 'org-admin',
+            },
+            {
+                value: 'Organization Member'
+                key: 'org-member',
+            },
+            {
+                value: 'Organization Accountant'
+                key: 'org-accountant',
+            },
+            <%- end -%>
         ]
         allowedRoles: [
           'admin',
@@ -102,6 +126,14 @@ secrets:
         vault_addr: http://vault:8200
       secret:
         database_pass: <%= @config['database']['password'] %>
+      <%- if @config.dig('plugins', 'organization', 'enabled') -%>
+      wallet_navs:
+        organization: { enabled: true, id: 'organization', label: 'Overview' },
+        overview: { enabled: false, id: 'overview', label: 'Overview' },
+        p2p: { enabled: false, id: 'p2p', label: 'P2P' },
+        spot: { enabled: true, id: 'spot', label: 'Wallet' },
+        transfer: { enabled: false, id: 'transfer', label: 'Transfer' }
+      <%- end -%>
 
   barong:
     scopes:
@@ -154,6 +186,9 @@ secrets:
         barong_password_use_dictionary: 'false'
         barong_csrf_protection: '<%= @config['csrfEnabled'] %>'
         jwt_public_key: <%= @barong_public_key %>
+        <%- if @config.dig('plugins', 'organization', 'enabled') -%>
+        barong_org_admin_switch_session_authorized_roles: ["member", "org-admin", "org-member", "org-accountant"]
+        <%- end -%>
       secret:
         jwt_private_key_path: /secrets/barong.key
         barong_vault_app_name: <%= @config['app']['name'].downcase %>
