Fix: typo in 'password_min_entropy' param

--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -21,7 +21,7 @@ secrets:
         captcha_id: ''
         captchaLogin: 'false'
         usernameEnabled: 'false'
-        password_min_enthropy: '14'
+        password_min_entropy: '14'
         passwordEntropyStep: '14'
         showLanding: 'true'
         sentryEnabled: 'false'
