Fix: Enclose barong_phone_number in quotes

--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -169,7 +169,7 @@ secrets:
         <%- if @config['twilio']['enabled'] -%>
         barong_twilio_account_sid: <%= @config['twilio']['account_sid'] %>
         barong_twilio_auth_token: <%= @config['twilio']['auth_token'] %>
-        barong_twilio_phone_number: <%= @config['twilio']['phone_number'] %>
+        barong_twilio_phone_number: "<%= @config['twilio']['phone_number'] %>"
         barong_phone_verification: twilio_sms
         <%- end -%>
         <%- if @config['captcha']['type'] == 'recaptcha' -%>
