--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -250,9 +250,10 @@ secrets:
       public: {}
       private:
         finex_log_level: warn
-        finex_influx_host: influxdb
+        finex_influx_host: influx-0-0
         finex_influx_port: '8086'
         finex_influx_scheme: http
+        finex_influx_replica: <%= @config['influx']['replica'] %>
         finex_database_driver: mysql
         finex_database_host: db
         finex_database_port: '3306'
