Feature: Add multichain support

--- a/templates/config/peatio/abilities.yml.erb
+++ b/templates/config/peatio/abilities.yml.erb
@@ -27,6 +27,7 @@ admin_permissions:
       - Withdraw
       - WithdrawLimit
       - Blockchain
+      - BlockchainCurrency
       - Currency
       - Engine
       - Market
@@ -55,11 +56,12 @@ admin_permissions:
       - WithdrawLimit
       - Currency
       - Blockchain
+      - BlockchainCurrency
       - Engine
       - Market
       - TradingFee
       - Wallet
-      - Adjustment 
+      - Adjustment
       - InternalTransfer
       - WhitelistedSmartContract
     read:
@@ -89,6 +91,7 @@ admin_permissions:
       - WithdrawLimit
       - Blockchain
       - Currency
+      - BlockchainCurrency
       - Engine
       - Market
       - TradingFee
@@ -112,6 +115,7 @@ admin_permissions:
       - WithdrawLimit
       - Blockchain
       - Currency
+      - BlockchainCurrency
       - Engine
       - Market
       - TradingFee
@@ -136,6 +140,7 @@ admin_permissions:
       - Deposit
       - Withdraw
       - Currency
+      - BlockchainCurrency
       - Engine
       - Market
       - Trade
@@ -153,6 +158,7 @@ admin_permissions:
       - Deposit
       - Withdraw
       - Currency
+      - BlockchainCurrency
       - Engine
       - Market
       - Trade
