Feature: Add multichain support (#350)

--- a/templates/config/peatio/seed/blockchains.yml.erb
+++ b/templates/config/peatio/seed/blockchains.yml.erb
@@ -1,13 +1,16 @@
-- key:               eth-<%= @config['parity']['network'] %>
-  name:              Ethereum <%= @config['parity']['network'].capitalize %>
-  client:            parity
-  server:            http://<%= @config['parity']['address'] %>:<%= @config['parity']['rpcport'] %>
-  height:            8670000
-  min_confirmations: 6
+- key:                  eth-<%= @config['parity']['network'] %>
+  name:                 Ethereum <%= @config['parity']['network'].capitalize %>
+  client:               parity
+  server:               http://<%= @config['parity']['address'] %>:<%= @config['parity']['rpcport'] %>
+  height:               8670000
+  protocol:             ERC-20
+  min_confirmations:    6
   explorer:
-    address:         https://etherscan.io/address/#{address}
-    transaction:     https://etherscan.io/tx/#{txid}
-  status:            active
+    address:            https://etherscan.io/address/#{address}
+    transaction:        https://etherscan.io/tx/#{txid}
+  status:               active
+  collection_gas_speed: standard
+  withdrawal_gas_speed: standard
 
 - key:               opendax-cloud
   name:              Opendax Cloud Blockchain
@@ -15,6 +18,7 @@
   server:            http://<%= @config['parity']['address'] %>:<%= @config['parity']['rpcport'] %>
   height:            8670000
   min_confirmations: 6
+  protocol:          Opendax
   explorer:
     address:         https://etherscan.io/address/#{address}
     transaction:     https://etherscan.io/tx/#{txid}
@@ -27,6 +31,7 @@
   server:            http://<%= @config['bitcoind']['rpcuser'] %>:<%= @config['bitcoind']['rpcpassword'] %>@<%= @config['bitcoind']['address'] %>:<%= @config['bitcoind']['rpcport'] %>
   height:            597000
   min_confirmations: 6
+  protocol:          Bitcoin
   explorer:
     address:         https://blockchain.info/address/#{address}
     transaction:     https://blockchain.info/tx/#{txid}
